--- a/sass/module/_responsive.scss
+++ b/sass/module/_responsive.scss
@@ -106,6 +106,12 @@
     margin-bottom: 15px;
   }
 
+  .projects .project-footer .project-footer-middle {
+    margin-bottom: 29px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
   .col-xs-12 .project-footer-box-middle {
       padding-left: 0;
       padding-right: 0;
@@ -344,8 +350,8 @@
         }
         .service-icon {
           position: absolute;
-          //top: 32px;
-          //width: 100px;
+          top: 33px;
+          left: 87px;
 
           .ico {
             height:35px;
@@ -404,6 +410,11 @@
       }
     }
   }
+  .projects .project-footer .project-footer-middle {
+    margin-bottom: 29px;
+    padding-left: 0;
+    padding-right: 0;
+  }
 
 
   .skype {
@@ -458,6 +469,8 @@
   }
 
 }
+
+
 
 
 
