--- a/sass/module/_testimonials.scss
+++ b/sass/module/_testimonials.scss
@@ -26,6 +26,10 @@
 
     .testimonials-avatar {
         text-align: center;
+
+        img {
+          width:50%;
+        }
     }
 
     .author {
