--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -2,13 +2,16 @@
 
 
 .l-menu {
+  position: relative;
   background-color: #032f3e;
+  box-shadow: 0 18px 33px #2a263c;
+  z-index: 100;
 }
 
 .l-slide {
   position: relative;
-  height: 864px;
-  background-color: #9e9e9e;
+  //height: 864px;
+  //background-color: #9e9e9e;
 
 
 }
