--- a/sass/module/_copyright.scss
+++ b/sass/module/_copyright.scss
@@ -24,6 +24,15 @@
 
     p {
       width: 15px;
+      
+      a:link {
+        color: #9c9c9e;
+      }
+
+      a:hover {
+        color: #aa977a;
+      }
+
     }
   }
 }
