--- a/sass/module/_projects.scss
+++ b/sass/module/_projects.scss
@@ -2,6 +2,10 @@
 
 .projects {
 
+    .projects-content {
+      padding-top: 50px;
+    }
+
 
     p {
       text-align: center;
@@ -62,14 +66,26 @@
         }
 
         .project-social {
+          display: flex;
+          flex-direction: row;
+
           p {
-            color: #b5b5b5;
+            //color: #b5b5b5;
             text-transform: uppercase;
+          }
+
+            a:link {
+              color: #032f40;
+            }
+
+            a:hover {
+              color: #aa977a;
+            }
 
               i {
                 padding-left: 30px;
               }
-          }
+
 
 
         }
@@ -110,15 +126,46 @@
       margin-bottom: 60px;
 
 
-        .project-footer-left, .project-footer-middle, .project-footer-right {
-          position: relative;
-          background-color: #9e9e9e;
-        }
-
         .project-footer-middle:first-child {
           margin-bottom: 29px;
 
         }
+
+      .project-footer-left {
+        position: relative;
+        height: 441px;
+
+        background-image: url('../img/articles/music.jpg');
+        -webkit-background-size: cover;
+        background-size: cover;
+      }
+
+      .project-footer .project-footer-box-middle {
+          .project-footer-middle-left {
+
+            background-image: url('../img/articles/rock.jpg');
+            -webkit-background-size: cover;
+            background-size: cover;
+
+          }
+
+        .project-footer-middle-right {
+
+          background-image: url('../img/articles/lessons.jpg');
+          -webkit-background-size: cover;
+          background-size: cover;
+
+        }
+      }
+
+      .project-footer-right {
+        position: relative;
+        height: 441px;
+
+        background-image: url('../img/articles/guitarist.jpg');
+        -webkit-background-size: cover;
+        background-size:cover;
+      }
 
         .project-footer-icon-folder {
           position: absolute;
