--- a/sass/module/_slide.scss
+++ b/sass/module/_slide.scss
@@ -1,11 +1,72 @@
 /*  Section Slide */
 
 
+    .carousel-indicators li {
+      width: 12px;
+      height: 12px;
+      background-color: rgba(0, 0, 0, 0);
+    }
+
+    .carousel-indicators .active {
+      width: 16px;
+      height: 16px;
+      background-color: #aa977a;
+    }
+
+  .slide-box {
+    position: relative;
+  }
+
 .slide-button {
   position: absolute;
-  top: 327px;
-  right: 35px;
+  top: 207px;
+  right: -9px;
+  
+    .slide-button-box {
+
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+
+
+      .btn-up {
+
+        height: 20px;
+        width: 20px;
+        margin-bottom: 118px;
+         a span {
+           margin-left: -4px;
+
+         }
+
+      }
+
+      .btn-down {
+        height: 20px;
+        width: 20px;
+
+        a span {
+          margin-left: -4px;
+          margin-top: 30px;
+        }
+
+      }
+    }
+
+
+  //  .carousel-indicators li {
+  //    width: 12px;
+  //    height: 12px;
+  //    background-color: rgba(0, 0, 0, 0);
+  //  }
+  //.carousel-indicators li .active {
+  //  width: 14px;
+  //  height: 14px;
+  //  background-color: rgba(171, 152, 122, 0);
+  //}
 }
+
+
 
 .slide {
   position: absolute;
@@ -16,21 +77,14 @@
     //.slide-box-shadow {
     //  box-shadow: 10px 32px 10px #666667;
     //  @include box-shadow(0 25px 20px orange);
-    //
-    //  color: #eee;
-    //}
-  //
-  //-moz-box-shadow: 0px 20px 20px 40px #656565;
-  //-webkit-box-shadow: 0px 20px 20px 40px #656565;
-  //-o-box-shadow: 0px 20px 20px 40px #656565;
-  //box-shadow: 0px 20px 20px 40px #656565;
-  ////filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=180, Strength=20);
 
 
   .slide-test {
+
     position: absolute;
-    top: 485px;
-    right: 0;
+    top: 337px;
+    right: 29px;
+    //border: 1px red solid;
 
       p {
         color: #eeeeee;
@@ -47,8 +101,8 @@
 
   .slide-on {
     position: absolute;
-    top: 660px;
-    right: 0;
+    top: 471px;
+    right: 43px;
 
     width: 170px;
     height: 123px;
